<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1"
    android:baselineAligned="true"
    android:orientation="vertical"
    android:background="#287de5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lector_claves_nfc"
        android:layout_gravity="center_horizontal"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="#287de5"
        android:textStyle="bold|italic"
        android:background="#d6b1afaf"
        android:layout_weight="0.09"
        android:textAlignment="center">
    </TextView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3d3737"
        android:text="@string/antonio_j_morales_el_colega_inform_tico"
        android:textAlignment="center"
        android:textColor="#d6b1afaf"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginTop="20sp"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_weight="0.01">

        <EditText
            android:id="@+id/edit_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/escribir_tag"
            android:inputType="text" />

        <Button
            android:id="@+id/button"
            android:layout_width="194dp"
            android:layout_height="wrap_content"
            android:text="@string/grabar_clave_a_tag"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.47"
        android:id="@+id/LayoutLeer"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostar_contenido_tag"
            android:id="@+id/button2"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/ContenidoTag"
            android:layout_width="match_parent"
            android:layout_height="133dp"
            android:width="@dimen/activity_horizontal_margin"
            android:background="#ffffff"
            android:gravity="center_horizontal"
            android:text="@string/contenido_del_tag"
            android:textAlignment="center"
            android:textIsSelectable="true"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pase_un_tag_por_su_antena_nfc"
            android:id="@+id/textView2"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:background="#020202"
            android:gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar_pantalla_buffer"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</LinearLayout>
